--- a/app/views/root/search.html.erb
+++ b/app/views/root/search.html.erb
@@ -1,2 +1,9 @@
 <h1> Cities </h1>
-<%= link_to root_path %>
+<%= link_to 'back to index', root_path  %>
+<ul>
+<% @cities.each do |city| %>
+ <li>
+ <%= city.name %>
+ </li>
+</ul>
+<% end %>
