--- a/app/views/root/search.html.erb
+++ b/app/views/root/search.html.erb
@@ -4,8 +4,6 @@ Search yielded <em><%= @cities.length %></em> results<br />
 <%= link_to 'back to index', root_path  %>
 <ul>
 <% @cities.each do |city| %>
- <li>
- <%= city.name %>
- </li>
+ <li> <%= city.name %> </li>
+ <% end %>
 </ul>
-<% end %>
